Metadata v2.3/src/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Accessories__c</fullName>
        <inlineHelpText>Select all the visible accessories of the vehicle</inlineHelpText>
        <label>Accessories</label>
        <picklist>
            <picklistValues>
                <fullName>Air Freshner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alloy Wheels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seat Covers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering Wheel Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streo System</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Calculated_Performance_Depreciation__c</fullName>
        <description>Performance Depriciation</description>
        <inlineHelpText>Percent Depriciation in vehicle performance</inlineHelpText>
        <label>Calculated Performance Depreciation</label>
        <precision>3</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chassis_Number__c</fullName>
        <description>Chassis Number</description>
        <inlineHelpText>Enter the Unique Vehicle Chassis Number</inlineHelpText>
        <label>Chassis Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_of_Servicing__c</fullName>
        <description>Total Cost of Servicing</description>
        <label>Cost of Servicing</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <description>Date of Purchase</description>
        <label>Date of Purchase</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dealer&apos;s Name</description>
        <inlineHelpText>Name of the Dealer</inlineHelpText>
        <label>Dealer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer</relationshipLabel>
        <relationshipName>Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_s_Notes__c</fullName>
        <inlineHelpText>Note from dealer regarding the further mantainance</inlineHelpText>
        <label>Dealer&apos;s Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Servicing__c</fullName>
        <inlineHelpText>A link to the detail page of past and current services provided</inlineHelpText>
        <label>Details of Servicing</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Dealer_Same_as_Seller__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the dealer is same as the seller</inlineHelpText>
        <label>Is Dealer Same as Seller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Servicing_Details__c</fullName>
        <label>Online Servicing Details</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Owner_s_Address__c</fullName>
        <description>Owner&apos;s Address</description>
        <label>Owner&apos;s Address</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Owner_s_Email__c</fullName>
        <description>Owner&apos;s Email</description>
        <label>Owner&apos;s Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_s_Mobile_Number__c</fullName>
        <label>Owner&apos;s Mobile Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Servicing_Date__c</fullName>
        <description>Date of Servicing</description>
        <inlineHelpText>Date and time when the servicing was completed.</inlineHelpText>
        <label>Servicing Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle_Id__c</fullName>
        <description>Vehicle&apos;s UID</description>
        <inlineHelpText>UID as issued by Govt.</inlineHelpText>
        <label>Vehicle Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Four Wheeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three Wheeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Wheeler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>